--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,11 @@
 export(beta_best_dens)
 export(beta_brar_trial)
 export(beta_bud_trial)
+export(beta_ineq)
+export(beta_ineq_approx)
+export(beta_ineq_sim)
+export(beta_mean)
+export(beta_prob_best)
 export(beta_prob_best_approx)
 export(beta_prob_best_numeric)
 export(beta_prob_supr)
@@ -10,17 +15,26 @@ export(beta_prob_supr_approx)
 export(beta_prob_supr_numeric)
 export(beta_var)
 export(brar_all)
+export(calc_ppos)
 export(const_ctrl_brar)
+export(dbetabinom)
+export(diff_beta_mean)
 export(diff_beta_var)
 export(ent_best_arm)
 export(ent_best_arm_approx)
+export(findfirst)
+export(fix_ctrl_brar)
 export(fix_ctrl_brar2)
 export(gen_potential_outcomes)
 export(mass_weighted_urn_design)
+export(plot_beta_norm)
 export(prob_best)
 export(psolve)
+export(rbetabinom)
 export(utility_ent)
 export(utility_var)
+import(data.table)
+import(stats)
 importFrom(loo,nlist)
 importFrom(pracma,quadgk)
 importFrom(stats,aggregate)
